--- a/Math123/annuities_amortization.html
+++ b/Math123/annuities_amortization.html
@@ -136,36 +136,90 @@ How much money do you have after 6 years?
     are 6% a year compounded monthly. What is the most they could borrow in a 30 year mortgage?
   </div>
 
-<!-- See November 1 worksheet for more examples
 
-
-<h2>Example - APY </h2>
-<button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex10">Example </button>
-  <div id="ex10" class="collapse">
-  <P> What is the effective rate (APY) on a savings account with 5% nominal rate (APR) compounded monthly?
+  <h2>Example - TV</h2>
+  <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex11">Example </button>
+    <div id="ex11" class="collapse">
+  <p>  Assume you buy a television set for $800 and agree to pay for it in 18 equal monthly payments at 1.5% interest per month on the unpaid balance.
+    <ol>
+      <li>How much are your payments?
+      <li>How much interest will you pay?
+  </ol>
   </div>
 
-<h2>Example - Christmas Club </h2>
-<button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex11">Example </button>
-  <div id="ex11" class="collapse">
-  <P> Consider someone saving for Christmas by putting money in a savings account earning 3% interest compounded monthly.
-    How much does this person need to put in at the beginning of the year to have $500 on December 1 (11 months later)?
-  <P> Can you explain what Present Value and Future Value mean in these situations?
+  <h2>Example - Car</h2>
+  <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex12">Example </button>
+    <div id="ex12" class="collapse">
+  <p> Suppose you buy a car for $2400 and finance the purchase at 1% per month for 24 months. What are your monthly payments to amoritize the loan?
   </div>
 
-<h2>Example - </h2>
-<button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex12">Example </button>
-  <div id="ex12" class="collapse">
-  <P> Find the present value of $49,158.60 in 5 years compounded quarterly with nominal interest rateof 10%.
-  </div>
+  <h2>Example - Retirement planning </h2>
+  <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex13">Example </button>
+    <div id="ex13" class="collapse">
+    <P> A person wants to make annual deposits for 25 years into an annuity that earns 9.4% compounded annually in order to retire.
+      Once retired they will make 20 equal annual withdrawls of $25000 reducing the balance of the account to $0.
+      How much must be deposited annually to accumulate sufficient funds to provide for these payments? How much total interest is earned during the entire 45 year process?
+    </div>
 
-<h2>Example - Bookstore </h2>
-<button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex13">Example </button>
-  <div id="ex13" class="collapse">
-  <P> The bookstore charges 1% interest per month on your unpaid balance. You charge $232.75 for books and don't pay your bill until the semester is over 4 months later.
-    How much do you owe?
-  </div>
--->
+    <h2>Example- Home equity </h2>
+    <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex14">Example </button>
+      <div id="ex14" class="collapse">
+      <P> Suppose Paul bought a house 10 years ago for $200,000. He made a down payment of 20% of the purchase price and took out a 30 year mortgage on the rest at 6% per year on the unpaid balance compounded monthly.
+        The house is now worth $380,000. How much equity does he have in the house?
+      </div>
+
+      <h2>Example  - Adjustable rate mortgages</h2>
+      <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex15">Example</button>
+        <div id="ex15" class="collapse">
+        <P> Five years ago the Campbells secured a 5/1 ARM to help finance the purchase of their home. The amount of the original loan was $350,000 for a term of 30 years, with interest at the rate of 5.76% per year, compounded monthly for the first 5 years. The Campbells' mortgage is due to reset next month, and the new interest rate will be 6.96% per year compounded monthly.
+          <ol>
+            <li>What was the Campbells' monthly mortgage payment for the first 5 years?
+            <li>What will the new monthly payment be (After the reset)?
+            <li>By how much will the payments increase? What is the percent increase?
+          </ol>
+        </div>
+
+        <h2>Example - Interest</h2>
+        <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex16">Example</button>
+          <div id="ex16" class="collapse">
+          <P> A family obtains a $75,000 home loan for 30 years at 8% interest. The monthly payments are $550.32 each.
+            <ol>
+              <li>What is the total amount paid over the 30 years?
+              <li>What is the total amount of interest paid?
+              </ol>
+          </div>
+
+          <h2>Example  - Interest rates</h2>
+          <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex17">Example</button>
+            <div id="ex17" class="collapse">
+            <P> Lori and Mike want to buy a house and move out of their tiny apartment. After studying thier budget, the determine that they can afford $1600 a month to cover mortgage payments and other costs of owning a house. They ask their friends about their expenses and learn that they can expect insurance, taxes, utilities and maintenance to be about $575 per month.
+              How large a 30-year mortgage can they obtain if the current interest rates are:
+              <ol type='a'>
+                <li>6.3%
+                <li>5.3%
+                <li>4.3%
+              </ol>
+            </div>
+
+            <h2>Example - Paying Points? </h2>
+            <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex17">Example</button>
+              <div id="ex17" class="collapse">
+              <P> When taking out a mortgage a point is simply 1% of the loan amount. In the mortgage
+process, a bank typically offers people several loan options. These loan options will have different interest
+rates but in order to get a lower rate, one must pay the bank by paying points. In a way this can be
+thought of a prepaying interest to the bank. For example, let’s look at a couple buying a house for
+$150,000. Let’s assume they put 20% down, so the loan amount is $120,000. We will neglect any closing costs associated with the mortgage.
+ A bank may offer these people a 30 year loan option with a 4% annual interest rate compounded monthly and another option
+with a 3.75% interest rate if they pay 1 point at the beginning of the loan. Which option is better for
+this couple? It depends on how many months they plan on staying in the house. (Many people do not
+stay in a home for the entire length of their mortgage.) If they live there a short time they may not
+recoup the money they paid upfront in lower monthly payments. Determine the number of months the couple must stay in the house for paying points to be worth it.
+                <ol type='a'>
+                  <li>
+                  <li>
+                  <li>
+                </ol>
+              </div>
 
 <br>
 
