--- a/Math123/annuities_amortization.html
+++ b/Math123/annuities_amortization.html
@@ -32,13 +32,13 @@ $(function () {
     <ul>
       <li><b>Annuities</b>
         <ul>
-        <li>future value: \(\displaystyle FV = R \frac{(1+i)^n - 1}{i} \)
-        <li>present value: \(\displaystyle P = R \left[ \frac{1 - (1 + i)^n}{i}\right]\)
+        <li>future value: \(\displaystyle FV = R \frac{(1+i)^n - 1}{i} \)<br><br>
+        <li>present value: \(\displaystyle P = R \left[ \frac{1 - (1 + i)^n}{i}\right]\)<br>
         </ul>
       <li><b>Amortization</b>
         <ul>
-        <li> payments: \(\displaystyle R = P \frac{(i}{1 - (1+i)^{-n}} \)
-        <li>
+        <li> payments: \(\displaystyle R = P \frac{(i}{1 - (1+i)^{-n}} \)<br><br>
+        <li> loan balance: \(\displaystyle Balance = P (1 + i)^n - R \left[ \frac{(1 + i)^n - 1}{i} \right] \)
         </ul>
       <li>Question: What does each variable represent in the equations above?
     </ul>
@@ -136,6 +136,12 @@ How much money do you have after 6 years?
     are 6% a year compounded monthly. What is the most they could borrow in a 30 year mortgage?
   </div>
 
+  <h2>Example - Loan balance</h2>
+  <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex10">Example </button>
+    <div id="ex10" class="collapse">
+    <P> Suppose that a business obtains a loan for $75,000 loan, at 5.8% interest, with quarterly payments of $2484.21 for 10 years.
+      What is the balance of the loan after 5 years?
+    </div>
 
   <h2>Example - TV</h2>
   <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex11">Example </button>
@@ -214,7 +220,7 @@ with a 3.75% interest rate if they pay 1 point at the beginning of the loan. Whi
 this couple? It depends on how many months they plan on staying in the house. (Many people do not
 stay in a home for the entire length of their mortgage.) If they live there a short time they may not
 recoup the money they paid upfront in lower monthly payments. Determine the number of months the couple must stay in the house for paying points to be worth it.
-        
+
               </div>
 
 <br>
