--- a/math154/polar_integrals.html
+++ b/math154/polar_integrals.html
@@ -157,7 +157,7 @@ def _(r1=input_box(r1,label="r(theta) =  "),tstart1=input_box(tstart1,label="the
 <h2>Example - Converting integrals</h2>
 <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#exampletri">Example</button>
   <div id="exampletri" class="collapse">
-      <P> Convert \( \displaystyle I = \int_{-1}^{1} \int_{1 - \sqrt{1 - y}}^{1 + \sqrt{1 - y}} x^2 + y^2~dx~dy\) to polar coordinates.
+      <P> Convert \( \displaystyle I = \int_{-1}^{1} \int_{1 - \sqrt{1 - y^2}}^{1 + \sqrt{1 - y^2}} x^2 + y^2~dx~dy\) to polar coordinates.
 
 </div>
 
