--- a/Math123/annuities_amortization.html
+++ b/Math123/annuities_amortization.html
@@ -37,7 +37,7 @@ $(function () {
         </ul>
       <li><b>Amortization</b>
         <ul>
-        <li> payments: \(\displaystyle R = P \frac{(i}{1 - (1+i)^{-n}} \)<br><br>
+        <li> payments: \(\displaystyle R = P \frac{i}{1 - (1+i)^{-n}} \)<br><br>
         <li> loan balance: \(\displaystyle Balance = P (1 + i)^n - R \left[ \frac{(1 + i)^n - 1}{i} \right] \)
         </ul>
       <li>Question: What does each variable represent in the equations above?
