--- a/Math123/annuities_amortization.html
+++ b/Math123/annuities_amortization.html
@@ -33,7 +33,7 @@ $(function () {
       <li><b>Annuities</b>
         <ul>
         <li>future value: \(\displaystyle FV = R \frac{(1+i)^n - 1}{i} \)<br><br>
-        <li>present value: \(\displaystyle P = R \left[ \frac{1 - (1 + i)^{-n}}{i}\right]\)<br>
+        <li>present value: \(\displaystyle P = R \left[ \frac{1 - (1 + i)^n}{i}\right]\)<br>
         </ul>
       <li><b>Amortization</b>
         <ul>
@@ -108,7 +108,7 @@ How much money do you have after 6 years?
     If an interest rate of 8% is charged on the unpaid balance and interest calculations are made at the end
     of each year, determine the size of the payments so that the loan (principal and interest charges) is amortized at the end of 5 years.
     <ul>
-      <li>Make an amortization table.
+      <li>Make an amortization table. (<a href="./amortization_table.xlxs">Excel example table</a>)
       <li>What is the relationship between outstanding balance and present value.
     </ul>
   </div>
@@ -133,7 +133,7 @@ How much money do you have after 6 years?
 <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex9">Example </button>
   <div id="ex9" class="collapse">
   <P> Suppose that a family determines that they can afford at most $2000 a month for a mortgage. The current mortgage rates
-    are 6% a year compounded monthly. What is the most they could borrow in a 30 year mortgage? What if the most they can afford is $1800 a month?
+    are 6% a year compounded monthly. What is the most they could borrow in a 30 year mortgage?
   </div>
 
   <h2>Example - Loan balance</h2>
@@ -167,6 +167,12 @@ How much money do you have after 6 years?
       How much must be deposited annually to accumulate sufficient funds to provide for these payments? How much total interest is earned during the entire 45 year process?
     </div>
 
+    <h2>Example- Home equity </h2>
+    <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex14">Example </button>
+      <div id="ex14" class="collapse">
+      <P> Suppose a couple bought a house 15 years ago for $300,000. They made a down payment of 25% of the purchase price and took out a 30 year mortgage on the rest at 4.8% per year on the unpaid balance compounded monthly.
+        The house is now worth $420,000. How much equity do they have in the house?
+      </div>
 
       <h2>Example  - Adjustable rate mortgages</h2>
       <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex15">Example</button>
