--- a/Math123/annuities_amortization.html
+++ b/Math123/annuities_amortization.html
@@ -108,7 +108,7 @@ How much money do you have after 6 years?
     If an interest rate of 8% is charged on the unpaid balance and interest calculations are made at the end
     of each year, determine the size of the payments so that the loan (principal and interest charges) is amortized at the end of 5 years.
     <ul>
-      <li>Make an amortization table. (<a href="./amortization_table.xlxs">Excel example table</a>)
+      <li>Make an amortization table. (<a href="./amortization_table.xlsx">Excel example table</a>)
       <li>What is the relationship between outstanding balance and present value.
     </ul>
   </div>
