--- a/math154/triple_integrals.html
+++ b/math154/triple_integrals.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html>
+<html lang="en">
   <head>
     <script type="text/javascript" async
   src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-MML-AM_CHTML">
@@ -32,7 +32,8 @@
 <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#wu">warmups</button>
   <div id="wu" class="collapse">
       <ol type='1'>
-        <li>
+        <li>Set up a triple integral representing the volume of a half cylinder with radius 1 and length 10.
+          Assume the cylinder's axis is along the \(x\)-axis.<br><br>
         <!--
         <li> Transform the following equations from polar to rectangular coordinates.
           <ol type='a'>
@@ -105,7 +106,7 @@
       <ol type='A'>
         <li> Set up an integral representing the mass of the solid bounded above by \(z=3\) and below by
         \(z = \sqrt{x^2 + y^2}\) with density \(\rho(x,y,z) = z\).<br>
-        <li> Calculate the mass. What is the best way to do this? (hint: Calc II and Calc III techniques) <br>
+        <li> Calculate the mass. What is the best way to do this? (hint: think about Calc II vs. Calc III techniques) <br>
         <li> What if the density were \(\rho(x,y,z) = xz\)? Set up integral for mass.
         </ol>
 <!--
@@ -130,14 +131,15 @@ def _(r=input_box(r,label="r(theta) =  "),tstart=input_box(tstart,label="theta s
  <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex1">Example</button>
    <div id="ex1" class="collapse">
      <ol type='A'>
-      <li>Set up an integral representing the volume of a half cylinder with radius 1 and length 10.<br><br>
       <li>Set up an integral representing the mass of the solid bounded by the planes
         <ol type='1'>
           <li>\( z = 1+x\)
           <li>\(z = 1- x\)
           <li>\(z=0\)
           </ol>
-          with \(y \in [0,3]\) and density \(\rho(x,y,z) = 10-z\) gm/cm\(^3\).
+          with \(y \in [0,3]\) and density \(\rho(x,y,z) = 10-z\) gm/cm\(^3\).<br><br>
+      <li> Show \( \displaystyle \iiint_T z~dV = \frac{1}{12} \) where \(T\) is the solid region in the first octant bounded by the graphs of \(z=1-x^2\) and \(y=x\).<br><br>
+      <li> Show \( \displaystyle \iiint_T \sqrt{x^2 + y^2}~dV = \frac{4\pi}{3} \) where \(T\) is the solid region bounded by the cylinder \(x^2 + z^2 = 1\) and the planes \(y + z = 2,\) and \( y = 0\).<br><br>
       </ol>
  </div>
 
