--- a/math154/triple_integrals.html
+++ b/math154/triple_integrals.html
@@ -139,7 +139,7 @@ def _(r=input_box(r,label="r(theta) =  "),tstart=input_box(tstart,label="theta s
           </ol>
           with \(y \in [0,3]\) and density \(\rho(x,y,z) = 10-z\) gm/cm\(^3\).<br><br>
       <li> Show \( \displaystyle \iiint_T z~dV = \frac{1}{12} \) where \(T\) is the solid region in the first octant bounded by the graphs of \(z=1-x^2\) and \(y=x\).<br><br>
-      <li> Show \( \displaystyle \iiint_T \sqrt{x^2 + y^2}~dV = \frac{4\pi}{3} \) where \(T\) is the solid region bounded by the cylinder \(x^2 + z^2 = 1\) and the planes \(y + z = 2,\) and \( y = 0\).<br><br>
+      <li> Show \( \displaystyle \iiint_T \sqrt{x^2 + z^2}~dV = \frac{4\pi}{3} \) where \(T\) is the solid region bounded by the cylinder \(x^2 + z^2 = 1\) and the planes \(y + z = 2,\) and \( y = 0\).<br><br>
       </ol>
  </div>
 
