--- a/math154/triple_integrals.html
+++ b/math154/triple_integrals.html
@@ -33,7 +33,7 @@
   <div id="wu" class="collapse">
       <ol type='1'>
         <li>Set up a triple integral representing the volume of a half cylinder with radius 1 and length 10.
-          Assume the cylinder's axis is along the \(x\)-axis.<br><br>
+          Assume the cylinder's axis is along the \(x\)-axis and the half cylinder is above the \(xy\) plane.<br><br>
         <!--
         <li> Transform the following equations from polar to rectangular coordinates.
           <ol type='a'>
