--- a/Math123/sets_venn_diagrams.html
+++ b/Math123/sets_venn_diagrams.html
@@ -26,6 +26,7 @@ $(function () {
 
 <hr>
 
+
 <!--
 <h2>Formulas</h2>
 <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#formula">Formulas </button>
@@ -266,6 +267,25 @@ $(function () {
       <li>How many didn't eat in the cafeteria?
       </ol>
 
+  </div>
+
+<h2>Example - Sociology project </h2>
+<button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex15">Example </button>
+  <div id="ex15" class="collapse">
+
+  <P>Charles Tally gave the following summary of his interviews with 135 students for a sociology project:
+    <ul>
+      <li>65 said they like to go to movies.
+      <li>77 said they like to go to football games.
+      <li>61 said they like to go to the theater.
+      <li>28 said they like to attend movies and football games.
+      <li>25 said they like to attend movies and the theater.
+      <li>29 said they like to attend football games and the theater.
+      <li>8 said they like to attend all three.
+      <li>4 said they do not like to attend any of these.
+      </ul>
+  <P>The professor refused to accept Charles’s paper because the information was inconsistent.
+    Was the professor justified in claiming that the information was inconsistent?
   </div>
 
 <br>
