--- a/Math123/counting_principles.html
+++ b/Math123/counting_principles.html
@@ -206,8 +206,133 @@ $(function () {
 
   <P> How many 5 card poker hands can be dealt from a standard 52 card deck?
   </div>
-<br>
 
+<h2>Example - combination values</h2>
+<button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex16">Example </button>
+<div id="ex16" class="collapse">
+
+<P> Calculate each of the terms below and arrange them in the manner they are shown.
+  <ul>
+    <li> ____________C(0,0)
+    <li> ________C(1,0)__C(1,1)
+    <li> ____C(2,0)__C(2,1)__C(2,2)
+    <li> C(3,0)__C(3,1)__C(3,2)__C(3,3)
+  </ul>
+</div>
+
+<h2>Example - binomial expansion</h2>
+<button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex17">Example </button>
+<div id="ex17" class="collapse">
+
+  <P> Expand each of the following:
+    <ol>
+      <li>\( (x + y)^2 \)
+      <li>\( (x + y)^3 \)
+      <li>\( (x + y)^4 \)
+      </ol>
+    <P>Do you notice a pattern? What is \( (x + y)^n \)?
+</div>
+
+<h2>Example - library display</h2>
+<button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex18">Example </button>
+<div id="ex18" class="collapse">
+  <P> At the college library exhibition of faculty publications, three mathematics books, four social science books and three biology books will be displayed on a shelf.
+    <ol>
+      <li>In how many ways can the books be arranged on the shelf?
+        <li>In how many ways can the books be arranged if books of the same subject are placed together?
+        </ol>
+</div>
+
+<h2>Example - cards</h2>
+<button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex19">Example </button>
+<div id="ex19" class="collapse">
+
+  <ol>
+          <li>How many ways are there to be dealt a 5 card poker hand of three aces and 2 kings (a full house - aces full of kings)?
+            <li>How many ways are there to be dealt a '4 of a kind' in a 5 card poker hand?
+            </ol>
+</div>
+
+<h2>Example - taxicab geometry</h2>
+<button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex20">Example </button>
+<div id="ex20" class="collapse">
+
+  <ol>
+    <li>
+    </ol>
+</div>
+
+<h2>Example - string quartet</h2>
+<button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex21">Example </button>
+<div id="ex21" class="collapse">
+ <P>A string quartet consists of 2 violinists, a violist, and a cellist.
+   There are 6 violinists, 3 violists, and 2 cellists under consideration for a group.
+   The director wants to know how each possible group perform together for a half hour per audition.
+   How much time does she need?
+  <ol>
+    <li>What if the violinists have a first and second chair?
+    </ol>
+</div>
+
+<h2>Example - concert tour</h2>
+<button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex22">Example </button>
+<div id="ex22" class="collapse">
+ <P>Imagine a music group is having a midwest concert tour with the following cities:
+  <ul>
+    <li>Minneapolis
+    <li>Cedar Rapids
+    <li>Madison
+    <li>Milwaukee
+    <li>Green bay
+    <li>Chicago
+    </ul>
+
+  <P>How many ways can they schedule the tour?
+
+  <P>What if the Wisconsin cities need to be scheduled consecutively?
+</div>
+
+<h2>Example - class skit</h2>
+<button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex23">Example </button>
+<div id="ex23" class="collapse">
+ <P>A 4 person class skit will perform for the PTA meeting. Ms. Dudley's class has 14 students, Ms. Clark's has 20 and Mr. Egger's has 17.
+   How many ways can the students be picked if the students all come from one class?
+</div>
+
+<h2>Example - restuarants?</h2>
+<button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex24">Example </button>
+<div id="ex24" class="collapse">
+ <P>A survey of 500 students found that during the last week 220 ate at Burger King, 165 ate at Kwik Trip, and 32 ate at both.
+   <ol>
+     <li>How many ate at one or both places?
+     <li>How many ate at neither?
+     <li>How many only ate at Burger King?
+     <li>Draw a Venn diagram.
+    </ol>
+</div>
+
+<h2>Example - UN Security Council</h2>
+<button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex25">Example </button>
+<div id="ex25" class="collapse">
+ <P>The United Nations Security Council has 15 members. There are 5 permanent members (USA, Russia, China, France, UK), and 10 rotating members.
+   In order to pass a resolution 9 votes are needed, but if any permanent member can veto a resolution and block passage.
+   How many ways can a vote pass?
+</div>
+
+<h2>Example - Company Committee</h2>
+<button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex26">Example </button>
+<div id="ex26" class="collapse">
+ <P>A company has 7 senior and 5 junior officers. An ad hoc committee is to be formed with 4 people.
+   How many ways can the committee be formed with:
+   <ol>
+     <li>Any 4 officers?
+     <li>4 senior officers?
+     <li>3 senior officers and 1 junior officer?
+     <li>2 senior officers and 2 junior officers?
+     <li>At least 2 senior officers?
+     <li>At least 2 junior officers?
+    </ol>
+</div>
 
 </body>
 </html>
