--- a/Math123/counting_principles.html
+++ b/Math123/counting_principles.html
@@ -256,9 +256,11 @@ $(function () {
 <h2>Example - taxicab geometry</h2>
 <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex20">Example </button>
 <div id="ex20" class="collapse">
-
+  <img src="./taxicab.png" width=350><br>
+  <P>Consider the situation above where you can only move along roads between your home and work.
   <ol>
-    <li>
+    <li>What is the length of the shortest path from home to work?
+    <li>How many such paths are there?
     </ol>
 </div>
 
