--- a/math154/cylindrical_spherical_integrals.html
+++ b/math154/cylindrical_spherical_integrals.html
@@ -150,7 +150,7 @@ def _(r=input_box(r,label="r(theta) =  "),tstart=input_box(tstart,label="theta s
         <li>What does \(\theta=\pi/4\) look like in spherical coordinates?<br>
         <li>What does \(\phi=\pi/2\) look like in spherical coordinates?<br>
         <li>Find the spherical coordinates for the point \((2,\frac{\sqrt{3}}{2},\frac{1}{2})\) in rectangular coordinates.<br>
-        <li>Find the cylindrical coordinates for the point above.
+        <li>Find the cylindrical coordinates for the point above. (Assume along z-axis.)
         </ol>
 </div>
 
@@ -163,10 +163,20 @@ def _(r=input_box(r,label="r(theta) =  "),tstart=input_box(tstart,label="theta s
           and the cone \(z = \sqrt{x^2 + y^2}\).<br><br>
         <li>A spherical shell centered at the origin has an inner radius of 6cm and and outer radius of 7cm.
           The density varies linearly with distance from the center. At the inner surface \(\rho = 9\)gm/cm\(^3\).
-          At the outer surface \(\rho = 11\)gm/cm\(^3\). Set up an integral for the mass of this solid.
+          At the outer surface \(\rho = 11\)gm/cm\(^3\). Set up an integral for the mass of this solid.<br><br>
+        <li>Show \(\displaystyle \iiint_T x~dV =\frac{\pi}{16}\) where \(T\) is the region in the first octant bounded by \(x^2 + y^2 + z^2 = 1\).
         </ol>
 </div>
 
+<h2>Example - More integrals </h2>
+<button type="button" class="btn btn-info" data-toggle="collapse" data-target="#examplesc">Example</button>
+  <div id="examplesc" class="collapse">
+      <ol type='A'>
+        <li>Which integral below evaluates easily? Why? Confirm your answer by performing the calculation and do the calculation for the other integral.<br><br>
+        <li>Evaluate \(\displaystyle \iiint_T \sqrt{x^2 + y^2}~dV\), where \(T\) is the region in the bounded by \(x^2 + y^2 = 1\) and \(z=1\) and \(z=3\).<br><br>
+        <li>Evaluate \(\displaystyle \iiint_T y~dV\), where \(T\) is the region bounded by the \(xy\) plane and \(z = \sqrt{1- x^2 - y^2}\).
+        </ol>
+</div>
 
 
 
