--- a/math154/centers_of_mass_3d.html
+++ b/math154/centers_of_mass_3d.html
@@ -92,6 +92,19 @@
 
 </div>
 
+<h2>Example - cube case</h2>
+<button type="button" class="btn btn-info" data-toggle="collapse" data-target="#example">Example</button>
+  <div id="example" class="collapse">
+      <ol>
+        <li>Find the center of mass of the cube \( [0,1] \times [0,1] \times [0,1]\) with density \(\rho(x,y,z) = xy\).<br>
+        <li>Find the moment of inertia about the \(z\)-axis for the cube above.<br>
+          Note that \(I_z = \iiint_C (x^2 + y^2) \, \rho (x,y,z) \, dV\)<br>
+        <li>Find the radius of gyration about the \(z\)-axis for the cube above.
+        </ol>
+
+</div>
+
+
 <h2>Example - Moments of Inertia </h2>
 <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#example0">Example</button>
   <div id="example0" class="collapse">
