--- a/math154/centers_of_mass_3d.html
+++ b/math154/centers_of_mass_3d.html
@@ -93,8 +93,8 @@
 </div>
 
 <h2>Example - cube case</h2>
-<button type="button" class="btn btn-info" data-toggle="collapse" data-target="#example">Example</button>
-  <div id="example" class="collapse">
+<button type="button" class="btn btn-info" data-toggle="collapse" data-target="#examplecc">Example</button>
+  <div id="examplecc" class="collapse">
       <ol>
         <li>Find the center of mass of the cube \( [0,1] \times [0,1] \times [0,1]\) with density \(\rho(x,y,z) = xy\).<br>
         <li>Find the moment of inertia about the \(z\)-axis for the cube above.<br>
