--- a/math154/centers_of_mass_3d.html
+++ b/math154/centers_of_mass_3d.html
@@ -118,7 +118,7 @@
         <li>\(I_z = \iiint_Q (x^2 + y^2) \, \rho (x,y,z) \, dV\)<br>
       </ul>
       <ol>
-        <li>Find the moments of intertia about each coordinate axis for the box of constant density, \(k\), with length, width, and height \(a,b,c\) in the \(x,y,z\) directions, respectively.
+        <li>Find the moments of intertia about each coordinate axis for the box of constant density, \(k\), centered at the origin, with length, width, and height \(a,b,c\) in the \(x,y,z\) directions, respectively.
         <li>The radius of gyration (kind of like a rotational center of mass) is given by \(\displaystyle R = \sqrt{\frac{I}{m}} \). Find \(R_x\) for the above box.
       </ol>
 
