--- a/Math123/counting_principles.html
+++ b/Math123/counting_principles.html
@@ -336,5 +336,34 @@ $(function () {
     </ol>
 </div>
 
+<h2>Example - Travel teams</h2>
+<button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex27">Example </button>
+<div id="ex27" class="collapse">
+<P>Fab-Knit has 15 sales representatives.
+  Atlanta and San Diego host trade shows the same week.
+  The company plans to send 3 sales representatives to Atlanta and 4 to San Diego.
+  How many ways can the selections be made?
+</div>
+
+<h2>Example - Reading list</h2>
+<button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex28">Example </button>
+<div id="ex28" class="collapse">
+<p>The reading list for a literature class has 6 fiction and 8 nonfiction books.
+  A student is to write a report on 5 books from the list during the semester.
+  The reports must include at least 1 and at most 4 reports of fiction books.
+  In how many ways can the selection of books be made?
+</div>
+
+<h2>Example - Handshake problem</h2>
+<button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex29">Example </button>
+<div id="ex29" class="collapse">
+  <p> A sociology seminar has 8 members.
+    <ol type='a'>
+      <li>They begin each meeting with each member shaking hands with all the other members.
+        No one shakes another member’s hand twice. How many handshakes take place?
+        <li> The professor shakes hands with each member of the seminar and in a different sequence each time.
+          How many sequences of handshakes are possible?
+        </ol>
+      </div>
 </body>
 </html>
