--- a/math154/vvf_158.html
+++ b/math154/vvf_158.html
@@ -32,7 +32,7 @@ $(function () {
     <P>Consider the curve in 3D whose position is given by \(\displaystyle \vec{r}(t) = \begin{bmatrix}t \cos t \\ t \sin t \\ t \end{bmatrix}\) for \(t >0 \).
     <ol>
       <li> Draw the curve.
-      <li> Find \(\displaystyle \frac{d}{dt}\vec{r}(t)\). What does this represent?
+      <li> Find \(\displaystyle \frac{d}{dt}\vec{r}(t)\). What does this represent? How is it related to the unit tangent vector?
       <li> Calculate \(\displaystyle \int r(t)~dt\).
       <li> If the particle starts out at the origin and travels along this curve, set up an integral that represents the distance traveled in time, \(T\).
     </ol>
@@ -53,7 +53,7 @@ $(function () {
      <ol>
        <li> What is \(\displaystyle \int \vec{r}~dt\)?
        <li> How is above different from \(\displaystyle \int_0^1 |\vec{r}|~dt\)?
-       <li> Calculate \(\displaystyle \int_0^1 |\vec{r}|~dt\)
+       <li> Calculate \(\displaystyle \int_0^1 |\vec{r}'|~dt\)
      </ol>
   </div>
  <h2>Derivative properties for vector valued functions </h2>
@@ -70,6 +70,7 @@ $(function () {
 
       <P>Questions.
         <ol>
+          <li>True or False. The following always holds: \(\displaystyle \vec{r} \times \vec{r}' = \vec{r} \times \vec{r}''\). Justify your answer.
           <li>Let \(\displaystyle \vec{r}(t) = \begin{bmatrix}1 + \sin(t)\\ \cos(2t) \\ 3t\end{bmatrix}\). Calculate \(\vec{r} \times \vec{r}'\) when \(t=0\).
           <li>Find an expression for \(\displaystyle \frac{d}{dt} \left( \vec{u}(t) \cdot \left( \vec{v}(t) \times \vec{w}(t)\right) \right) \).
         </ol>
