--- a/math154/vvf_158.html
+++ b/math154/vvf_158.html
@@ -70,7 +70,7 @@ $(function () {
 
       <P>Questions.
         <ol>
-          <li>True or False. The following always holds: \(\displaystyle \vec{r} \times \vec{r}' = \vec{r} \times \vec{r}''\). Justify your answer.
+          <li>True or False. The following always holds: \(\displaystyle \frac{d}{dt}(\vec{r} \times \vec{r}') = \vec{r} \times \vec{r}''\). Justify your answer.
           <li>Let \(\displaystyle \vec{r}(t) = \begin{bmatrix}1 + \sin(t)\\ \cos(2t) \\ 3t\end{bmatrix}\). Calculate \(\vec{r} \times \vec{r}'\) when \(t=0\).
           <li>Find an expression for \(\displaystyle \frac{d}{dt} \left( \vec{u}(t) \cdot \left( \vec{v}(t) \times \vec{w}(t)\right) \right) \).
         </ol>
