--- a/Math123/intro_probability.html
+++ b/Math123/intro_probability.html
@@ -159,6 +159,35 @@ $(function () {
 
   </div>
 
+<h2>Example - basic case</h2>
+<button type="button" class="btn btn-info" data-toggle="collapse" data-target="#exbc">Example </button>
+  <div id="exbc" class="collapse">
+    <P>Consider an experiment with four outcomes A, B, C, and D. Suppose we know P(A) = 0.1, P(B) = 0.2, and P(C) = 0.3.
+
+      <ul>
+        <li>What is the probabilty that D doesn't occur?<br>
+        <li>What is the probabilty that D occurs?<br>
+        <li>What is the probabilty that A or D occurs?<br>
+        <li>What is the probabilty that A and D occurs?<br>
+      </ul>
+  </div>
+
+<h2>Example - Penny flips</h2>
+<button type="button" class="btn btn-info" data-toggle="collapse" data-target="#exep">Example </button>
+  <div id="exep" class="collapse">
+    <P>Everyone get a penny. Flip it fairly for a heads or tails. We'll make a table with the number of heads similar the one below. <br>
+      <table width=50%>
+        <tr><td>Number flipped</td><td>Number heads</td><td>Relative frequency</td></tr>
+        <tr><td>30</td><td>12</td><td>12/30</td></tr>
+      </table>
+
+      <ul>
+        <li><b>Definition :</b> Relative frequency = \(\frac{\text{number occurrences of event}}{\text{number of trials}}\)<br>
+        <li>As \(n \nearrow\) the relative frequency goes towards 0.5.<br>
+        <li><b>Empirical probability</b> (related to statistics) : often what we resort to when we don't know everything about a system.<br>
+        <li><b>Law of Large Numbers</b> As more and more trials of an experiment are repeated, the relative frequency of an event approaches the actual (theoretical) probability.
+      </ul>
+  </div>
 
 <h2>Example - Movie bin</h2>
 <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#ex5">Example </button>
