--- a/math154/vector_fields.html
+++ b/math154/vector_fields.html
@@ -163,7 +163,7 @@ Need to cover - sketching; recognizing fields/flow lines; gradient fields; poten
 <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#example0">Example</button>
   <div id="example0" class="collapse">
     <P><b>Theorem</b> Let \(\vec{F}\) be a vector field in \(\mathbb{R}^2\) such that the component functions of \(\vec{F}\) have continuous second order mixed partial derivatives
-      on the domain of \(\vec{F}\). Then if \(\displaystyle \vec{F} = \begin{bmatrix} P(x,y) \\ Q(x,y) \end{bmatrix}\), \(\vec{F}\) is a conservative field then \(P_y = Q_x\).
+      on the domain of \(\vec{F}\). If \(\displaystyle \vec{F} = \begin{bmatrix} P(x,y) \\ Q(x,y) \end{bmatrix}\) is a conservative field then \(P_y = Q_x\).
       <ul>
         <li>Show this theorem holds for \(\vec{F} = 2y\hat{x} + 2x\hat{y}\).<br>
         <li>What are the converse, inverse, and contrapositive of this statement?<br>
