--- a/Math123/day_b4_thx.html
+++ b/Math123/day_b4_thx.html
@@ -20,7 +20,7 @@ $(function () {
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   </head>
-  <body style="width:600px; padding-left: 1cm; padding-bottom: 10cm" background="bg.jpg">
+  <body style="width:600px; padding-left: 1cm; padding-bottom: 10cm; font-size: 250%;" background="bg.jpg">
 
 <h1>Day before Thanksgiving break</h1>
 <hr>
