--- a/Math123/day_b4_thx.html
+++ b/Math123/day_b4_thx.html
@@ -20,7 +20,7 @@ $(function () {
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   </head>
-  <body style="width:600px; padding-left: 1cm; padding-bottom: 10cm; font-size: 250%;" background="bg.jpg">
+  <body style="width:1000px; padding-left: 1cm; padding-bottom: 10cm; font-size: 200%;" >
 
 <h1>Day before Thanksgiving break</h1>
 <hr>
@@ -75,7 +75,7 @@ $(function () {
   <P>Sometimes people just don’t get along, and you are caught in the middle. Imagine
 that you are a wedding planner organizing the rehearsal dinner before a big wedding.
 There are a total of 16 people attending the rehearsal dinner: A, B, C, ..., H
-are relatives of the bride and groom; I, J, K, Á P are members of the wedding party. If things weren’t stressful enough, you are told that some of these people
+are relatives of the bride and groom; I, J, K, ..., P are members of the wedding party. If things weren’t stressful enough, you are told that some of these people
 have serious issues:
 <ul>
 <li>A doesn’t get along with F,G, or H,
